# LAB-4-IoT

./: .gitignore  README.md  sdkconfig.defaults  sdkconfig.defaults.sed
main/: CMakeLists.txt  coap_demo.c  esp_ot_cli.c  esp_ot_custom_config.h  idf_component.yml  valve_demo.c
tools/: dashboard_coap.py
